Fixed compatibility with Bukkit 1.18 and newer