@@ -3,8 +3,6 @@ package com.ryanmichela.sshd.common;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.logging.Level;
-import java.util.stream.Collectors;
-
 import org.jline.reader.Candidate;
 import org.jline.reader.Completer;
 import org.jline.reader.LineReader;
@@ -35,8 +33,10 @@ public class ConsoleCommandCompleter implements Completer {
 		Waitable<List<Candidate>> waitable = new Waitable<List<Candidate>>() {
 			@Override
 			protected List<Candidate> evaluate() {
-				List<Candidate> list = plugin.tabComplete(plugin.getConsoleSender(), buffer).stream().map(Candidate::new).collect(Collectors.toList());
-				return list;
+				return plugin.tabComplete(plugin.getConsoleSender(), buffer)
+						.parallelStream()
+						.map(Candidate::new)
+						.toList();
 			}
 		};
 		this.plugin.getTaskManager().runSync(waitable);
@@ -44,7 +44,6 @@ public class ConsoleCommandCompleter implements Completer {
 			List<Candidate> offers = waitable.get();
 			if (offers == null) return;
 			candidates.addAll(offers);
-			return;
 		} catch (ExecutionException e) {
 			this.plugin.getLogger().log(Level.WARNING, "Unhandled exception when tab completing", e);
 		} catch (InterruptedException e) {
